<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/home_label"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:drawableStartCompat="@drawable/ic_app_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/empty_option"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/values_option"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_one" />

</androidx.constraintlayout.widget.ConstraintLayout>