<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="cryptoPrice"
            type="com.ronak.junoApplication.dto.CryptoPrice" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_price"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/iv_crypto"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/crypto_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:urlData="@{cryptoPrice.logo}"
                    tools:src="@drawable/ic_app_icon" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_crypto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@{cryptoPrice.title}"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_crypto"
                    tools:text="BTC" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{@string/dollars_placeholder(cryptoPrice.current_price_in_usd)}"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_crypto"
                    tools:text="@string/dollars_placeholder" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_deposit"
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            app:backgroundTint="@android:color/white"
            app:cornerRadius="4dp"
            app:icon="@drawable/ic_deposit"
            app:layout_constraintBottom_toTopOf="@id/cv_price"
            app:layout_constraintEnd_toStartOf="@id/btn_buy"
            app:layout_constraintTop_toTopOf="@id/cv_price" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_buy"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="-8dp"
            android:text="@string/buy"
            android:textAppearance="?attr/textAppearanceCaption"
            app:backgroundTint="@android:color/white"
            app:cornerRadius="4dp"
            app:layout_constraintBottom_toTopOf="@id/cv_price"
            app:layout_constraintEnd_toEndOf="@id/cv_price"
            app:layout_constraintTop_toTopOf="@id/cv_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>