<?xml version="1.0" encoding="utf-8"?>
<com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_crypto_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp">

                <View
                    android:id="@+id/iv_main"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/shimmerColor"
                    android:contentDescription="@string/crypto_account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_main"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="12dp"
                    android:text="@string/crypto_account"
                    app:layout_constraintStart_toEndOf="@id/iv_main"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/tv_sub"
                    android:layout_width="160dp"
                    android:layout_height="20dp"
                    android:layout_marginHorizontal="12dp"
                    android:background="@color/shimmerColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_main"
                    app:layout_constraintTop_toBottomOf="@id/tv_main"
                    tools:text="@string/btc_eth_and_more" />

                <View
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:background="@color/shimmerColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/cv_crypto_balance" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_your_cryptos"
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/your_crypto_holdings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_crypto_holdings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_your_cryptos">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <View
                    android:id="@+id/iv_hold"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/shimmerColor"
                    android:contentDescription="@string/crypto_account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/tv_hold_title"
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="12dp"
                    android:background="@color/shimmerColor"
                    app:layout_constraintStart_toEndOf="@id/iv_hold"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/crypto_account" />

                <View
                    android:id="@+id/tv_subtitle"
                    android:layout_width="160dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="12dp"
                    android:background="@color/shimmerColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_hold"
                    app:layout_constraintTop_toBottomOf="@id/tv_hold_title"
                    tools:text="@string/btc_eth_and_more" />

                <View
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:background="@color/shimmerColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/cv_crypto_holdings" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_transactions"
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/recent_transactions"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <View
            android:id="@+id/rv_transaction1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="24dp"
            android:background="@color/shimmerColor"
            app:layout_constraintTop_toBottomOf="@id/tv_transactions" />

        <View
            android:id="@+id/rv_transaction2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="24dp"
            android:background="@color/shimmerColor"
            app:layout_constraintTop_toBottomOf="@id/rv_transaction1" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/rv_transaction2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_current_prices"
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/current_prices"
            app:layout_constraintTop_toBottomOf="@id/divider3" />

        <View
            android:id="@+id/rv_price1"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_margin="24dp"
            android:background="@color/shimmerColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_current_prices" />

        <View
            android:id="@+id/rv_price2"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_margin="24dp"
            android:background="@color/shimmerColor"
            app:layout_constraintStart_toEndOf="@id/rv_price1"
            app:layout_constraintTop_toBottomOf="@id/tv_current_prices" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/rv_price1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.facebook.shimmer.ShimmerFrameLayout>